--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,12 +3,11 @@
     font-size: x-large;
     display: grid;
     width: 100%;
-    height: 100%;
     }
 
     .header {
         display: grid;
-        grid-template-rows: repeat(3, 35px);
+        grid-template-rows: repeat(3, 2fr);
         grid-template-columns: repeat(3, 1fr);
     }
 
@@ -30,8 +29,8 @@
     .section{
         background-color: rgb(249, 254, 224);
         display: grid;
-        grid-template-rows: repeat(3, 55px) 130px 130px;
-        grid-template-columns: 50% 50%;
+        grid-template-rows: repeat(3, 1.5fr) 3fr 3fr;
+        grid-template-columns: 50% 49%;
     }
 
     .sone {
@@ -44,7 +43,7 @@
     .stwo, .sfree, .sfour {
         display: grid;
         background-color: rgb(204, 210, 90); 
-        height: 110px;
+        height: 15vh;
         justify-content: center;
         align-items: center;
         margin: 10px;
@@ -53,19 +52,19 @@
     .stwo {        
         grid-row: 4/5;
         grid-column: 1/2;
-        width: 480px;
+        width: 31vw;
     }
 
     .sfree {        
         grid-row: 4/5;
         grid-column: 2/3;
-        width: 480px;
+        width: 31vw;
     }
 
     .sfour {       
         grid-row: 5/6;
         grid-column: 1/3;
-        width: 990px;
+        width: 64vw;
     }
 
     .aside {
@@ -77,7 +76,7 @@
 
     .footer {
         display: grid;
-        grid-template-rows: 20px 151px 20px;
+        grid-template-rows: 1vh 25vh 1vh;
         justify-content: space-around;   
         align-items: center;
     }
@@ -86,8 +85,8 @@
         display: grid;
         grid-row: 2/3;
         background-color: rgb(255, 255, 255); 
-        width: 350px;
-        height: 120px;
+        width: 20vw;
+        height: 15vh;
         align-items: center;
         justify-content: center;
     }
